# mGST

./: .gitignore  LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
Jupyter tutorials/: Basic examples.ipynb  qiskit_interface.ipynb
Jupyter tutorials/.ipynb_checkpoints/: Basic examples-checkpoint.ipynb
Jupyter tutorials/sample project/: Untitled.ipynb  run_mGST.py  testing.ipynb
mGST/: .gitignore  additional_fns.py  algorithm.py  compatibility.py  low_level_jit.py  optimization.py  pyproject.toml
mGST/.ipynb_checkpoints/: additional_fns-checkpoint.py  algorithm-checkpoint.py  optimization-checkpoint.py
mGST/__pycache__/: low_level_jit.MVE_lower-69.py38.1.nbc  low_level_jit.MVE_lower-69.py38.nbi  low_level_jit.contract-47.py38.1.nbc  low_level_jit.contract-47.py38.2.nbc  low_level_jit.contract-47.py38.nbi  low_level_jit.dK_dMdM-130.py38.1.nbc  low_level_jit.dK_dMdM-130.py38.2.nbc  low_level_jit.dK_dMdM-130.py38.nbi  low_level_jit.ddA_derivs-246.py38.1.nbc  low_level_jit.ddA_derivs-246.py38.2.nbc  low_level_jit.ddA_derivs-246.py38.nbi  low_level_jit.ddB_derivs-273.py38.1.nbc  low_level_jit.ddB_derivs-273.py38.2.nbc  low_level_jit.ddB_derivs-273.py38.nbi  low_level_jit.ddM-159.py38.1.nbc  low_level_jit.ddM-159.py38.2.nbc  low_level_jit.ddM-159.py38.nbi  low_level_jit.local_basis-30.py38.1.nbc  low_level_jit.local_basis-30.py38.2.nbc  low_level_jit.local_basis-30.py38.3.nbc  low_level_jit.local_basis-30.py38.nbi  low_level_jit.objf-56.py38.1.nbc  low_level_jit.objf-56.py38.2.nbc  low_level_jit.objf-56.py38.3.nbc  low_level_jit.objf-56.py38.nbi
mGST/src/: algorithm.py
src/: additional_fns.py  optimization.py
src/mGST/: additional_fns.py  algorithm.py  compatibility.py  low_level_jit.py  optimization.py  qibo_interface.py  qiskit_interface.py
tutorials/: basic_examples.ipynb  qibo_interface.ipynb  qiskit_interface.ipynb
tutorials/.ipynb_checkpoints/: basic_examples-checkpoint.ipynb  qiskit_interface-checkpoint.ipynb
tutorials/sample_project/: generate_sequences.py  run_mGST.py  (+1 more)
(+34 files in other folders)
