[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mGST"
version = "0.1.0"
license = "MIT"

[[project.authors]]
name = "Raphael Brieger"
[[project.authors]]
name = "Pau Dietz Romero"


description = "Gate Set Tomography"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
	"matplotlib",
    "numpy",
    "scipy",
    "pygsti",
    "tqdm",
    "numba",
    "cython"
]

[tool.hatch.metadata]
allow-direct-references = true
